[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-url-image-fix"
version = "1.0.0"
description = "A plugin for Endstone that enables Add-Ons to send form buttons with URL images!"
authors = [
    { name = "zelisce", email = "contact@zelisce.dev" }
]
dependencies = [
    "bedrock_protocol == 0.0.1"
]

[project.entry-points."endstone"]
url-image-fix = "endstone_url_image_fix:Main"